unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_tso_Questionnaire_Recipient__c.field-meta.xml
<CustomField>
    <fullName>litify_tso_Questionnaire_Recipient__c</fullName>
    <description>Specify the recipient who will receive the intake email.</description>
    <inlineHelpText>Who will receive this intake email?</inlineHelpText>
    <label>Questionnaire Recipient</label>
    <type>Email</type>
</CustomField>