unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_tso_Questionnaire_Subject__c.field-meta.xml
<CustomField>
    <fullName>litify_tso_Questionnaire_Subject__c</fullName>
    <description>The subject of the intake email to be sent out.</description>
    <inlineHelpText>What should the subject line of the questionnaire email be?</inlineHelpText>
    <label>Questionnaire Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>