unpackaged/main/default/objects/litify_pm__Intake__c/fields/Manual_Role_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Manual_Role_Category_Name__c</fullName>
    <description>Used only with the Multiple Role Category Flow. This will manually run the sync to update the Merge Assist Records. This field will be cleared out after the Flow Runs.</description>
    <inlineHelpText>Used only with the Multiple Role Category Flow. This will manually run the sync to update the Merge Assist Records. This field will be cleared out after the Flow Runs.</inlineHelpText>
    <label>Manual Role Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>