unpackaged/main/default/objects/litify_pm__Intake__c/fields/Total_Converted_Leads__c.field-meta.xml
<CustomField>
    <fullName>Total_Converted_Leads__c</fullName>
    <formula>If(NOT(ISBLANK( litify_pm__Converted_Date__c ))=True,1,null)</formula>
    <label># Converted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>