unpackaged/main/default/objects/litify_pm__Intake__c/fields/Total_Questionnaires__c.field-meta.xml
<CustomField>
    <fullName>Total_Questionnaires__c</fullName>
    <formula>If(NOT(ISBLANK( litify_pm__Questionnaire_End_Date__c ))=True,1,null)</formula>
    <label># Questionnaires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>