unpackaged/main/default/objects/litify_pm__Intake__c/fields/Total_Retainer_Sent__c.field-meta.xml
<CustomField>
    <fullName>Total_Retainer_Sent__c</fullName>
    <formula>If(NOT(ISBLANK(litify_pm__Retainer_Agreement_Sent_Date__c))=True,1,null)</formula>
    <label># Retainer Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>