unpackaged/main/default/objects/litify_pm__Intake__c/fields/Total_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>Total_Under_Review__c</fullName>
    <formula>If(NOT(ISBLANK(litify_pm__Under_Review_Date__c))=True,1,null)</formula>
    <label># Under Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>