unpackaged/main/default/objects/litify_pm__Intake__c/recordTypes/litify_pm__Active_Intake.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Active_Intake</fullName>
    <active>true</active>
    <label>Active Intake</label>
</RecordType>