unpackaged/main/default/objects/litify_pm__Intake__c/recordTypes/litify_pm__Converted_Intake.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Converted_Intake</fullName>
    <active>true</active>
    <label>Converted Intake</label>
</RecordType>