unpackaged/main/default/objects/litify_pm__Intake__c/recordTypes/New_Intake.recordType-meta.xml
<RecordType>
    <fullName>New_Intake</fullName>
    <active>true</active>
    <description>Default record type tied to simplified New Intake Layout page layout. Converts to Active Intake record type using Workflow Rules after record creation.</description>
    <label>New Intake</label>
</RecordType>