unpackaged/main/default/objects/litify_pm__Intake__c/listViews/All_Intakes_This_Week.listView-meta.xml
<ListView>
    <fullName>All_Intakes_This_Week</fullName>
    <columns>litify_pm__lit_Display_Name_Link__c</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Incident_Date__c</columns>
    <columns>litify_pm__Statute_of_Limitations_Date__c</columns>
    <columns>litify_pm__Status__c</columns>
    <columns>litify_pm__Case_Quality__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>litify_pm__Intake__c.litify_pm__Active_Intake</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>All Intakes - This Week</label>
</ListView>