unpackaged/main/default/objects/litify_pm__Intake__c/listViews/litify_pm__All.listView-meta.xml
<ListView>
    <fullName>litify_pm__All</fullName>
    <columns>litify_pm__lit_Display_Name_Link__c</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Incident_Date__c</columns>
    <columns>litify_pm__Statute_of_Limitations_Date__c</columns>
    <columns>litify_pm__Status__c</columns>
    <columns>litify_pm__Case_Quality__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>