unpackaged/main/default/objects/litify_pm__Intake__c/listViews/litify_pm__Converted_Intakes.listView-meta.xml
<ListView>
    <fullName>litify_pm__Converted_Intakes</fullName>
    <columns>litify_pm__lit_Display_Name_Link__c</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Incident_Date__c</columns>
    <columns>litify_pm__Statute_of_Limitations_Date__c</columns>
    <columns>litify_pm__Matter__c</columns>
    <columns>litify_pm__Matter_Created_Date__c</columns>
    <columns>litify_pm__Case_Quality__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_pm__Status__c</field>
        <operation>equals</operation>
        <value>Converted</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>litify_pm__Intake__c.litify_pm__Converted_Intake</value>
    </filters>
    <label>Converted Intakes</label>
</ListView>