unpackaged/main/default/objects/litify_pm__Intake__c/listViews/Open_Intakes_Not_Yet_Contacted.listView-meta.xml
<ListView>
    <fullName>Open_Intakes_Not_Yet_Contacted</fullName>
    <columns>litify_pm__lit_Display_Name_Link__c</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Total_Calls__c</columns>
    <columns>litify_pm__Total_Emails__c</columns>
    <columns>litify_pm__Incident_Date__c</columns>
    <columns>litify_pm__Statute_of_Limitations_Date__c</columns>
    <columns>litify_pm__Status__c</columns>
    <columns>litify_pm__Case_Quality__c</columns>
    <columns>litify_pm__Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_pm__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>litify_pm__Intake__c.litify_pm__Active_Intake</value>
    </filters>
    <filters>
        <field>litify_pm__Total_Calls__c</field>
        <operation>lessThan</operation>
        <value>1</value>
    </filters>
    <label>Open Intakes - Not Yet Contacted</label>
</ListView>